// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bracket_spacing.graphql - {"bogus1":null,"graphqlCurlySpacing":false} format 1`] = `
====================================options=====================================
bogus1: null
graphqlCurlySpacing: false
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
fragment Visit on HighlightedVisit
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 20}
  ) {
  name
}

=====================================output=====================================
fragment Visit on HighlightedVisit
@argumentDefinitions(count: {type: "Int", defaultValue: 20}) {
  name
}

================================================================================
`;

exports[`bracket_spacing.graphql - {"bogus2":null} format 1`] = `
====================================options=====================================
bogus2: null
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
fragment Visit on HighlightedVisit
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 20}
  ) {
  name
}

=====================================output=====================================
fragment Visit on HighlightedVisit
@argumentDefinitions(count: { type: "Int", defaultValue: 20 }) {
  name
}

================================================================================
`;
